--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,7 +17,7 @@
         <!-- Header -->
         <header>
             <img src="{{ url_for('static', filename='mosmart-logo.png') }}" alt="MoSMART Logo" class="logo">
-            <h1>A powerful S.M.A.R.T. monitoring software</h1>
+            <h1>System Status Overview</h1>
             <img src="{{ url_for('static', filename='logo_top.png') }}" alt="Modigs Datahjelp Logo" class="logo">
             <div class="header-controls">
                 <div class="status-indicator">
